# LatticeStaticsPackage

./: Doxyfile  Makefile
LatticeStatics/: .cvsignore  .gitignore  Example.data  LatticeStatics.cpp  MakeRank1Convex  Makefile
LatticeStatics/Lattices/: DFTExternal.cpp  DFTExternal.h  DFTExternalOld.cpp  DFTExternalOld.h  DisplacementControl.cpp  DisplacementControl.h  ElasticaBeam1D.cpp  ElasticaBeam1D.h  FEAP-stub.cpp  FEAP.cpp  FEAP.h  FourBarTruss.cpp  FourBarTruss.h  GenericLat.cpp  GenericLat.h  KnownLattices.cpp  KnownLattices.h  Lattice.cpp  Lattice.h  Makefile  MultiChainTPP.cpp  MultiChainTPP.h  MultiChainTTPP.cpp  MultiChainTTPP.h  MultiLatticeKIM.cpp  MultiLatticeKIM.h  MultiLatticeTPP.cpp  MultiLatticeTPP.h  NeoHookean2D.cpp  NeoHookean2D.h  NiTi15TPPLat.cpp  NiTi15TPPLat.h  NiTi6TPPLat.cpp  NiTi6TPPLat.h  NiTi9TPPLat.cpp  NiTi9TPPLat.h  NiTiPressTempPairPotLat.cpp  NiTiPressTempPairPotLat.h  NiTiRadii.h  (+35 more)
LatticeStatics/neo-hookean/: CMakeLists.txt  local_grid_tools.cc  local_grid_tools.h  local_grid_tools.inst  manually_grid_tools.cc  manually_grid_tools.h  neo-hookean.cpp
LinearAlgebra/: .cvsignore  CMatrix.cpp  CMatrix.h  CVector.cpp  CVector.h  EigenSys.cpp  HermiteEigenSys.cpp  LinearAlgebraBuildDate.cpp  Makefile  Matrix.cpp  Matrix.h  PrincipalSys.cpp  SparseMatrix.cpp  SparseMatrix.h  Vector.cpp  Vector.h  Vector3D.cpp  Vector3D.h  matrixtest.cpp
MyMath/: .cvsignore  Makefile  Math.cpp  Math.h  Mathtest.cpp  MyComplexDouble.cpp  MyComplexDouble.h  MyMath.h  MyMathBuildDate.cpp  Polynomial.cpp
include/: .cvsignore  .gitignore
lib/: .gitignore
(+1071 files in other folders)
